--- a/2022.02.05 („Plumb” de G. Bacovia)/Eseu poezie simbolista/Eseu_poezie_simbolista.tex
+++ b/2022.02.05 („Plumb” de G. Bacovia)/Eseu poezie simbolista/Eseu_poezie_simbolista.tex
@@ -54,7 +54,7 @@ marginparsep=3mm             % Space between margin and text
 
 Poezia simbolistă \operatitle de \operaauthor deschide volumul cu același titlu, apărut în 1916, definindu-l în totalitate. Așezarea sa în fruntea primului volum publicat de Bacovia îi conferă calitatea de text programatic.
 
-Universul poetic bacovian are la bază cîteva motive specifice liricii simbolite: motivul singurătății apăsătoare, sentimentul inadaptării producând izolarea, înstrăinarea și dorința de evadare.
+Universul poetic bacovian are la bază câteva motive specifice liricii simboliste: motivul singurătății apăsătoare, sentimentul inadaptării producând izolarea, înstrăinarea și dorința de evadare.
 
 Simbolismul este un curent literar apărut în Franța, unde a fost teoretizat în 1886 de Jean Moréas, în articolul-manifest \textit{„Le Symbolisme”}. Curentul literar a fost promovat la noi de Alexandru Macedonski, prin articole programatice, reviste și cenaclul simbolist \textit{„Literatorul”}. Publicate în perioada interbelică, volumele lui Bacovia aparțin \textit{„unei faze mai târzii a simbolismului”}, cu deschideri spre modernism.
 
@@ -71,7 +71,7 @@ Poezia este o elegie, deoarece exprimă sentimentul de tristețe și spaima de m
 Tema poeziei o constituie condiția poetului izolat într-o societate lipsită de aspirații și artificială, condiție marcată de singurătate, imposibilitatea comunicării și a evadării, moartea iubirii.
 
 \marginnote{motive lirice}[0.6cm]
-Motivele lirice cu valoare de simbol aparțin câmpului semantic al \textit{morții}: \textit{plumbul}, \textit{cimitirul}, \textit{sicriele}, \textit{cavoul}, \textit{somnul}, \textit{vântul}, \textit{frigul}, și configurează decorul funerar. Ele se asociază cu stări sufletești sau existențiale nelămurite, confuze, care constituie obiectul poeziei simboliste: \textit{singurătatea}, \textit{izolarea}, \textit{spaima de moarte}, \textit{angoasa}, \textit{spleenul}, \textit{tragicul existențial}, \textit{disperarea}, \textit{inadaptarea}, \textit{privirea în sine ca într-un străin}. Laitmotivul \textit{„stam singur”} subliniază senzația de pustire sufletească.
+Motivele lirice cu valoare de simbol aparțin câmpului semantic al \textit{morții}: \textit{plumbul}, \textit{cimitirul}, \textit{sicriele}, \textit{cavoul}, \textit{somnul}, \textit{vântul}, \textit{frigul}, și configurează decorul funerar. Ele se asociază cu stări sufletești sau existențiale nelămurite, confuze, care constituie obiectul poeziei simboliste: \textit{singurătatea}, \textit{izolarea}, \textit{spaima de moarte}, \textit{angoasa}, \textit{spleenul}, \textit{tragicul existențial}, \textit{disperarea}, \textit{inadaptarea}, \textit{privirea în sine ca într-un străin}. Laitmotivul \textit{„stam singur”} subliniază senzația de pustiire sufletească.
 
 \marginnote{viziunea despre lume}[0.3cm]
 Viziunea despre lume este sumbră și de un tragism asumat cu luciditate. Poezia bacoviană este a unui solitar și a unui prizonier, a unei conștiințe înspăimântate de sine, de neant și de lumea în care trăiește. Imaginarul poetic din \operatitle înfățișează lumea ca pe un imens cimitir, tot ce e viu fiind împietrit/mineralizat sub efectul metalului toxic.
@@ -80,7 +80,7 @@ Lirismul subiectiv este redat prin mărcile eului liric: persoana I singular a v
 
 În prima strofă, eul apare în ipostaza însinguratului, într-o lume pustie și moartă: \textit{„Stam singur în cavou... și era vânt”}. Condiția poetului damnat din cauza im\-po\-si\-bi\-li\-tă\-ții comunicării cu lumea exterioară se amplifică în strofa a doua, devenind incomunicare în plan inferior, sufletesc.
 
-În străfa a doua, moartea iubirii/iubitei acutizează angoasa și sentimentul de singurătate. Dacă la romantici iubirea poate fi o cale de împlinire, la Bacovia moartea amorului sugerează pierderea ultimei speranțe de salvare.
+În strofa a doua, moartea iubirii/iubitei acutizează angoasa și sentimentul de singurătate. Dacă la romantici iubirea poate fi o cale de împlinire, la Bacovia moartea amorului sugerează pierderea ultimei speranțe de salvare.
 
 \section{Elemente de compoziție și de limbaj ale textului poetic studiat, semnificative pentru tema și viziunea despre lume {\footnotesize (de exemplu: imaginar poetic, titlu, incipit, relații de opoziție și de simetrie, motiv poetic, laitmotiv, figuri semantice/tropi, elemente de prozodie etc.)}}
 
@@ -93,6 +93,32 @@ Semnificațiile cuvântului \textit{„plumb”} se construiesc pe baza corespon
 
 În compoziția poeziei esențial este principiul simetriei. Textul este structurat în două catrene între care cuvântul \textit{„plumb”} asigură legătura de substanță, fiind repetat de șase ori și plasat în poziții simetrice, la rima exterioară și interioară. Alte surse ale simetriei sunt paralelismul sintactic și tehnica simbolistă a repetițiilor (verbul \textit{„dormeau”}/\textit{„dormea”} și laitmotivul \textit{„stam singur”}).
 
-Versul-incipit \textit{„Dormeau adânc sicriele de plumb”}, care înfâțișează lumea ca pe un imens cimitir, cuprinde două simboluri obsedante ale liricii lui \operaauthor, \textit{„sicrie”} și \textit{„plumb”}. Personificarea \textit{„dormeau... sicriele...”} și epitetul verbului \textit{„dormeau adânc”} sugerează ideea morții ca un somn profund, iar metafora-simbol \textit{„sicriele de plumb”} exprimă imposibilitatea comunicării și lipsa de sensibilitate a contemporanilor poetului. Motivul somnului, redat de verbul la imperfect \textit{„dormeau”}, cu sens durativ, prin repetare și reluare exprimă împietrirea, moartea sufletească. Așezarea simbolului \textit{„plumb”} la final de vers exprimă închiderea
+Versul-incipit \textit{„Dormeau adânc sicriele de plumb”}, care înfățișează lumea ca pe un imens cimitir, cuprinde două simboluri obsedante ale liricii lui \operaauthor, \textit{„sicrie”} și \textit{„plumb”}. Personificarea \textit{„dormeau... sicriele...”} și epitetul verbului \textit{„dormeau adânc”} sugerează ideea morții ca un somn profund, iar metafora-simbol \textit{„sicriele de plumb”} exprimă imposibilitatea comunicării și lipsa de sensibilitate a contemporanilor poetului. Motivul somnului, redat de verbul la imperfect \textit{„dormeau”}, cu sens durativ, prin repetare și reluare exprimă împietrirea, moartea sufletească. Așezarea simbolului \textit{„plumb”} la final de vers exprimă închiderea în orizontul pecetluit de plumb și imposibilitatea evadării.
+
+În strofa \rom{1} este descrisă lumea exterioară prin termenii \textit{„sicrie”}, \textit{„cavou”}, \textit{„cavou”}, \textit{„funerar”}, \textit{„flori”}, \textit{„coroane”}, din câmpul lexico-semantic al morții. Cadrul spațial apăsător, sufocant este înfățișat printr-o enumerație de elemente ale decorului funerar: metafora \textit{„sicrie de plumb”}, oximoronul \textit{„flori de plumb”}, inversiunea \textit{„funerar vestmânt”}.
+\marginnote{figuri semantice/tropi}[-0.3cm]
+Lumea obiectuală, în manifestările ei de gingășie și frumusețe -- \textit{„florile”}, este și ea marcată de împietrire, sugerată de oximoronul \textit{„flori de plumb”}.
+
+Corespondențele sunt legături subtile între planul exterior și cel interior, iar lumea este o reflectare a unei stări de spirit. Astfel, răceala, împietrirea afectivă a lumii, exprimată de simbolul \textit{„vânt”}, cu sugestii auditive și tactile, corespunde senzației de gol sufletesc, exprimată direct de laitmotiv: \textit{„Stam singur în cavou... și era vânt”}. Vântul produce stridențe acustice și senzația de rece, specifică morții, în imaginea auditivă din versul \textit{„Și scârțâiau coroanele de plumb”}.
+
+Strofa a \rom{2}-a debutează sub semnul tragicului existențial, generat de \textit{moartea} iubirii: \textit{„Dormea întors amorul meu de plumb”}. Eul liric își privește sentimentul ca un spectator: \textit{„Stam singur lângă mort”}, imagine tragică și absurdă a înstrăinării de sine. Încercarea de salvare este iluzorie: \textit{„Și-am început} \textsl{să-l strig}\textit{”}. Metafora \textit{„aripile de plumb”} presupune zborul în jos, căderea surdă și grea, imposibilitatea evadării, moartea afectivității.
+
+Expresivitatea are surse multiple, în plan morfosintactic, fonetic și prozodic, lexical. De pildă, în plan morfologic, verbele la imperfect, dispuse simetric în paralelism (\textit{„dormeau”}/\textit{„dormea”}, \textit{„scârțâiau”}/\textit{„atârnau”}) sau repetate în versul-refren (\textit{„stam”}/\textit{„stam”}, \textit{„era”}/\textit{„era”}), plasează confesiunea poetică într-un trecut nedefinit, ca într-un coșmar din care eul liric nu poate scăpa.
+
+În poezia simbolistă, sugestia este folosită drept cale de exprimare a co\-res\-pon\-den\-țe\-lor, prin cultivarea senzațiilor diverse (vizuale, auditive, tactile).
+
+Poezia \operatitle transmite spaima de neant a ființei, fiind realizată ca un tablou static, cu imagini vizuale preponderente, dar impresia de coșmar se
+\marginnote{imagini artistice}[0.3cm]
+amplifică în prezența unor imagini auditive: în prima strofă, verbul onomatopeic redă zgomotul înspăimântător al obiectelor din cimitir, sugerând dezacordul eului cu lumea \textit{„scârțâiau coroanele de plumb”}, iar în strofa a doua vuietul se interiorizează, devenind un strigăt de disperare a ființei. Simbolurile \textit{frigul} și \textit{vântul} reprezintă disoluția materiei și realizează, prin senzații tactile, corespondența dintre planul naturii și golul sufletesc exprimat de laitmotivul \textit{„stam singur”}.
+
+\marginnote{ambiguitatea limbajului}
+Ambiguitatea, o caracteristică a limbajului poetic modern, este produsă de multiplele semnificații pe care le pot primi sintagme precum epitetul \textit{„(dormea) întors”} sau metafora \textit{„aripile de plumb”}. Versul \textit{„Stam singur lângă mort”} poate conota înstrăinarea de sine, alienarea, ca reacție la absurdul existenței.
+
+\marginnote{muzicalitatea limbajului}[0.8cm]
+În ceea ce privește prozodia, \operatitle are o construcție sobră, riguroasă, care sugerează angoasa și imposibilitatea salvării. Elementele prozodiei clasice produc muzicalitatea exterioară, prin rima îmbrățișată, măsura fixă de 10 silabe, alternarea iambului cu amfibrahul. Muzicalitatea interioară, specific simbolistă, se realizează prin sonoritatea dată de consoanele \textit{„grele”} ale simbolului \textit{„plumb”}, repetat obsesiv în rimă, dar și în rima interioară, de tehnica repetițiilor, de asonanțe și alterații, care transformă poezia într-un vaier monoton.
+
+\subsection{Concluzie}
+
+Prin atmosferă, muzicalitate, folosirea sugestiei, a simbolului și a corespondențelor, prin prezentarea stărilor sufletești de angoasă, de singurătate, de vid sufletesc, poezia \operatitle se încadrează în estetica simbolistă.
 
 \end{document}
