add bold italic macro to template

--- a/etc/template/Basic_LaTeX_Template-andy3153.tex
+++ b/etc/template/Basic_LaTeX_Template-andy3153.tex
@@ -34,6 +34,7 @@ marginparsep=3mm             % Space between margin and text
 % Custom commands
 % Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
 \newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
+\newcommand{\textbfit}[1]{\textbf{\textit{#1}}} % combine bold and italic
 \newcommand{\operatitle}{\textbf{\textit{\ }}} % title of the commented opera
 \newcommand{\operaauthor}{\ } % author of the commented opera
 
