--- a/2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/Eseu_poezie_modernista.tex
+++ b/2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/Eseu_poezie_modernista.tex
@@ -34,8 +34,9 @@ marginparsep=3mm             % Space between margin and text
 % Custom commands
 % Format: \newcommand{\command}{action (add '\ ' or '{}' if it won't add a space properly)}
 \newcommand{\rom}[1]{\uppercase\expandafter{\romannumeral #1\relax}} % Roman numerals
-\newcommand{\operatitle}{\textbf{\textit{„Riga Crypto și lapona Enigel\ }}} % title of the commented opera
-\newcommand{\operaauthor}{Ion Barbu\ } % author of the commented opera
+\newcommand{\textbfit}[1]{\textbf{\textit{#1}}} % combine bold and italic
+\newcommand{\operatitle}{\textbfit{„Riga Crypto și lapona Enigel\ }} % title of the commented opera
+\newcommand{\operaauthor}{Ion Barbu} % author of the commented opera
 
 % Basic document info
 \title{Eseu cu privire la tema și viziunea despre lume într-o poezie modernistă studiată}
@@ -51,7 +52,39 @@ marginparsep=3mm             % Space between margin and text
 
 \subsection{Context}
 
-Publicată în 1924,
+Publicată în 1924, integrată apoi în volumul \textbfit{„Joc secund”}, balada \operatitle face parte din a doua etapă de creație barbiană, numită baladic-orientală, dar anunță dezvoltarea ulterioară a poeziei lui \operaauthor.
 
+\section{Evidențierea trăsăturilor care fac posibilă încadrarea poeziei studiate într-o tipologie, într-un curent cultural/literar, într-o orientare tematică}
 
+\marginnote{poem alegoric}[1.2cm]
+\operatitle este subintitulată \textit{„Baladă”}, începe ca un cântec bătrânesc de nuntă, dar se realizează în viziune modernă, ca un amplu poem de cunoaștere și poem alegoric, o poveste de iubire din lumea vegetală. Autorul păstrează din specia tradițională schema epică și personajele antagonice, dar evenimentele narate sunt de natură fantastică (dialogul în vis dintre rigă și laponă) și alegorică. Scenariul epic este dublat de caracterul dramatic și de \textit{„lirismul de măști”}, personajele având semnificații simbolice multiple (materia și spiritul etc.).
+
+Poemul se încadrează modernismului interbelic prin intelectualizarea emoției, imaginar poetic inedit, ambiguitate, metafore surprinzătoare și cuvinte cu sonorități ne\-o\-biș\-nu\-i\-te, înnoiri prozodice.
+
+\section{Prezentarea imaginilor/ideilor poetice, relevante pentru tema și viziunea despre lume din textul studiat}
+
+Tema poeziei o reprezintă iubirea ca modalitate de cunoaștere a lumii. Fiind „un \textbfit{Luceafăr} întors”, poemul prezintă drama cunoașterii și a incompatibilității dintre două lumi (regnuri).
+
+Titlul baladei trimite cu gândul la marile povești de dragoste din literatura universală, \textbfit{„Romeo și Julieta”}, \textbfit{„Tristan și Isolda”}. Însă la \operaauthor, membrii cuplului sunt antagonici (fac parte din regnuri diferite). Sunt personaje romantice cu trăsături excepționale, dar negative în raport cu norma comună (Crypto e \textit{„sterp”} și \textit{„nărăvaș/Că nu voia să înflorească”}, iar Enigel este \textit{„prea-cuminte”}).
+
+\marginnote{sem\-ni\-fi\-ca\-ția titlului}[-0.3cm]
+Numele Crypto are dublă semnificație: cel tăinuit, \textit{„inimă ascunsă”}, provenind din adjectivul \textit{„criptic”}, (\textit{„ascuns”}, \textit{„tăinuit”}), dar sugerează, în egală măsură, apartenența sa la familia ciupercilor, numele științific \textit{„criptogame”}. Personajul este rege (rigă) al făpturilor inferioare, din regnul vegetal. Numele cu sonoritate nordică Enigel sugerează originea laponei (de la pol) și trimite probabil la semnificația cuvântului din limba suedeză, \textit{„înger”} (care provine din latinescul \textit{„angelus”}).
+
+\section{Ilustrarea elementelor de compoziție și de limbaj ale textului poetic studiat, semnificative pentru tema și viziunea despre lume {\footnotesize (de exemplu: imaginar poetic, titlu, incipit, relații de opoziție și de simetrie, motiv poetic, laitmotiv, figuri semantice/tropi, elemente de prozodie etc.)}}
+
+\marginnote{compoziție}[0.3cm]
+La nivel formal, poezia este alcătuită din două părți, fiecare dintre ele prezentând câte o nuntă: una împlinită, cadru al celeilalte nunți, povestită, ratată, modificată în final prin căsătoria lui Crypto cu măsălarița. Formula compozițională este aceea a povestirii în ramă.
+
+Prologul conturează în puține imagini atmosfera de la finalul unei nunți trăite. Primele patru strofe constituie rama viitoarei povești și reprezintă dialogul menestrelului cu \textit{„nuntașul fruntaș”}.
+
+Partea a doua prezintă povestea de iubire neîmplinită dintre Enigel și riga Crypto. Nunta povestită cuprinde mai multe tablouri poetice: portretul și împărăția rigăi Crypto (strofele 5-7), portretul, locurile natale și oprirea din drum a laponei Enigel (strofele 8-9), întâlnirea dintre cei doi (strofa 10), cele trei chemări ale rigăi și primele două refuzuri ale laponei (strofele 11-15), răspunsul laponei și refuzul categoric cu relevarea relației dintre simbolul solar și propria condiție (strofele 16-20), încheierea întâlnirii (strofele 21-22), pedepsirea rigăi în finalul baladei (strofele 23-27). Modurile de expunere sunt, în ordine: descrierea, dialogul și narațiunea.
+
+În expozițiune, sunt prezentate în antiteză portretele membrilor cuplului și focurile lor natale, deosebirile dintre ei generând intriga.
+
+Riga Crypto, \textit{„inimă ascunsă”}, este craiul bureților, căruia dragostea pentru Enigel, \textit{„laponă mică, liniștită”}, îi este fatală. Singura lor asemănare este statutul superior în interiorul propriei lumi: el este rigă al plantelor inferioare, care nu înfloresc, iar păstorița care își conduce turmele de reni spre sud este o stăpână a regnului animal, în ipostaza de ființă rațională, omul -- \textit{„fiară bătrână”}.
+
+\marginnote{imaginar poetic}[0.3cm]
+Spațiul definitoriu al existenței, pentru Crypto, este umezeala perpetuă și impură, în timp ce lapona vine \textit{„din țări de gheață urgisită”}, spațiu rece, ceea ce explică aspirația ei spre soare și lumină, dar și mișcarea de transhumanță care ocazionează popasul în ținutul rigăi.
+
+Membrii cuplului fac parte
 \end{document}
