--- a/2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/Eseu_poezie_modernista.tex
+++ b/2022.02.26 („Riga Crypto și lapona Enigel”)/Eseu poezie modernista/Eseu_poezie_modernista.tex
@@ -3,6 +3,7 @@
 %% created   04/10/21 ~ 18:21:32
 %% modified1 15/10/21 ~ 23:15:05
 %% modified2 03/11/21 ~ 18:37:45
+%% modified3 22/02/22 ~ 12:48:17
 %%
 
 % Document preamble
@@ -86,5 +87,32 @@ Riga Crypto, \textit{„inimă ascunsă”}, este craiul bureților, căruia dra
 \marginnote{imaginar poetic}[0.3cm]
 Spațiul definitoriu al existenței, pentru Crypto, este umezeala perpetuă și impură, în timp ce lapona vine \textit{„din țări de gheață urgisită”}, spațiu rece, ceea ce explică aspirația ei spre soare și lumină, dar și mișcarea de transhumanță care ocazionează popasul în ținutul rigăi.
 
-Membrii cuplului fac parte
+Membrii cuplului fac parte din regnuri diferite și, de aceea, nu pot comunica în plan real. Întâlnirea lor se realizează în visul fetei, la fel ca în \textbfit{„Luceafărul”}. Riga este cel care rostește de trei ori descântecul de dragoste și, de tot atâtea ori, lapona îl respinge. Povestea propriu-zisă se dovedește a fi fantastică, ca și în poemul eminescian, doar că rolurile sunt inversate. În dialogul lor, formulele de adresare sugerează familiaritate, afecțiune blândă: repetiția \textit{„Enigel, Enigel”}, epitetul \textit{„rigă blând”}.
+
+În prima chemare-descântec, cu rezonanțe de incantație magică, Crypto își îmbie aleasa cu \textit{„dulceață”} și cu \textit{„fulgi”}, elemente ale existenței sale vegetative, dar care aici capătă conotații erotice. Darul lui este refuzat categoric de Enigel: \textit{„Eu nu mă duc să culeg/Fragii fragezi mai la vale”}. Refuzul laponei îl pune într-o situație dilematică, dar opțiunea lui e fermă și merge până la sacrificiul de sine, în a doua chemare: \textit{„Dacă pleci să culegi/Începi, rogu-te, cu mine”}.
+
+Al doilea refuz este susținut de enumerarea atributelor lui Crypto: \textit{„blând”}, \textit{„plăpând”}, \textit{necopt -- „Lasă. Așteaptă de te coace”}. Opoziția \textit{„copt”} -- \textit{„necopt”}, reluată în al treilea refuz prin antiteza \textit{soare-umbră}, pune în evidență incompatibilitatea lor. Imaginii de fragilitate a lui Crypto lapona îi opune aspirația ei spre absolut. Soarele este simbolul existenței spirituale, al împlinirii umane, în antiteză cu \textit{„umbra”}, simbol al existenței instinctuale, sterile, vegetative.
+
+Pentru a-și continua drumul către soare și cunoaștere, lapona refuză descântecul rigăi, deși regretă și plânge. Descântecul se întoarce în mod brutal asupra celui care l-a rostit și-l distruge. Făptura firavă este distrusă de propriul vis, cade victimă neputinței și îndrăznelii de a-și depăși limitele.
+
+Finalul este trist. Riga Crypto se transformă într-o ciupercă otrăvitoare, obligat să rămână alături de făpturi asemenea lui, \textit{„Laurul-Balaurul”} și \textit{„măsălarița-mireasă”}. Încercarea ființei inferioare de a-și depăși limitele este pedepsită cu nebunia.
+
+\marginnote{figuri semantice/ tropi}[1.3cm]
+Soarele, simbolul spiritului, este imaginat în poem prin metaforele \textit{„roata albă”} (perfecțiunea geometrică) și \textit{„aprins inel”} (simbolul nunții), în antiteză cu \textit{„umbra”}, iar metafora \textit{„sufletul-fântână”} sugerează puritatea, setea de cunoaștere, veșnicia, fiind în antiteză cu \textit{„carnea”} (trupul, instinctele). Spiritul și sufletul sunt atribute ale ființei raționale, înțelepte. Făpturile inferioare care aspiră să dobândească spiritualitate sunt distruse de propriul vis, așa cum i se întâmplă lui Crypto, care „înnebunește” și se transformă în ciupercă otrăvitoare.
+
+Trei mituri fundamentale de origine greacă sunt valorificate în opera poetului: al soarelui (absolutul), al nunții și al oglinzii.
+
+Drumul spre sud al laponei are semnificația unui drum inițiatic, iar popasul în ținutul rigăi este o probă, trecută prin respingerea nunții pe o treaptă inferioară.
+\marginnote{sem\-ni\-fi\-ca\-ții}[0.3cm]
+Drumul trece prin cercul Venerii (iubirea ce reduce omul la ipostază de ființă instinctuală), apoi sufletul trebuie să mai urce o treaptă, cercul lui Mercur, mai pur, al intelectului, al cunoașterii raționale. Inițierea completă are loc prin adevărata \textit{nuntă} a trupului și spiritului cu însuși focarul vieții, prin trecerea omului în cercul Soarelui (cunoașterea absolută). Aspirația solară a laponei sugerează faptul că, în momentul întâlnirii cu riga Crypto, aceasta se află pe treapta lui Mercur, fără ca ea să fi trăit experiența iubirii. Chemările lui Crypto o atrag spre cercul Venerii. Ea trăiește iubirea ca experiență inițiatică, dar alege să-și urmeze drumul spre Soare (cunoașterea absolută).
+
+\marginnote{figuri de stil}[0.8cm]
+Sub raport stilistic, prezența inversiunilor și a vocativelor în prima parte a baladei evidențiază oralitatea textului. În portretizarea celor două personaje simbolice sunt utilizate epitetul și antiteza: Crypto este \textit{„sterp și nărăvaș”}, \textit{„rigă spân”}; lapona e \textit{„mică, liniștită”} și \textit{„prea-cuminte”}. Ambiguitatea este produsă de metaforele insolite: \textit{„Că sufletul nu e fântână/}[...]\textit{/Pahar e gândul, cu otravă”}.
+
+\marginnote{prozodie}[0.3cm]
+Alcătuirea prozodică pare destul de riguroasă inițial: catrene cu rimă încrucișată și măsură predominantă de 8-9 silabe.
+
+\subsection{Concluzie}
+
+Poemul \operatitle impune o viziune modernă. Interpretarea dată de însuși \operaauthor\ poemului, \textit{„un \textbf{Luceafăr} întors”}, relevă asemănarea cu problematica capodoperei lui Mihai Eminescu, dar poemul modern este totuși \textit{„un Luceafăr cu rolurile inversate și într-un decor de o nebănuită noutate”}, cum remarcă Nicolae Manolescu.
 \end{document}
